kubernetes/gabernetes/apps/cilium/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
      name: public
  hostnames:
    - ${app_url}
  rules:
    - backendRefs:
        - kind: Service
          name: hubble-ui
          port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  mergeType: StrategicMerge
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hubble-ui
  oidc:
    provider:
      issuer: https://${oidc_host}/application/o/cilium-hubble/
      authorizationEndpoint: https://${oidc_host}/application/o/authorize/
      tokenEndpoint: https://${oidc_host}/application/o/token/
    clientIDRef:
      name: oidc
    clientSecret:
      name: oidc
    scopes: [openid, offline_access]
